--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+a {
+  color: #11999E;
+}
+
 body {
   font-family: 'Raleway', sans-serif;
   margin: 0;
@@ -22,33 +26,38 @@ h3 {
   font-family: 'Dosis', sans-serif;
 }
 
-a {
-  color: #11999E;
+hr {
+  border-color: #a8a8a8;
+  border-style: none;
+  border-top-style: dotted;
+  border-width: 5px;
+  height: 0;
+  margin: 60px auto;
+  width: 5%;
 }
 
+p {
+  font-weight: bold;
+}
+
+/* Top Container */
+
 .top-container {
-  background-color: lightskyblue;
+  background-color: #EAF6F6;
   padding-top: 100px;
   position: relative;
 }
 
-.mid-container {
-
-}
-
-.bot-container {
-
-}
-
-.square {
-  height: 200px;
-  width: 200px;
+.subtitle {
+  font-weight: normal;
+  margin-top: 20px;
 }
 
 .top-cloud {
   position: absolute;
-  top: 50px;
   right: 20%;
+  top: 50px;
+
 }
 
 .bottom-cloud {
@@ -61,8 +70,21 @@ a {
   margin: 0 auto;
 }
 
+/* Mid Container */
+
+.mid-container {
+  padding: 60px 0;
+}
+
+.skill-row {
+  margin: 50px auto;
+  line-height: 2;
+  text-align: left;
+  width: 60%;
+}
+
 .skill-img {
-  width: 25%;
+  width: 200px;
 }
 
 .web-dev-img {
@@ -75,15 +97,50 @@ a {
   margin-left: 30px;
 }
 
-.skill-row {
-  margin: 100px auto;
-  line-height: 2;
-  text-align: left;
-  width: 50%;
+.web-dev-img2 {
+  float: left;
+  margin-right: 30px;
 }
 
+.cooking-img2 {
+  float: right;
+  margin-left: 30px;
+}
 
-.subtitle {
-  font-weight: normal;
-  margin-top: 20px;
+.butn {
+  background: #11999E;
+  background-image: -webkit-linear-gradient(top, #11999E, #2980b9);
+  background-image: -moz-linear-gradient(top, #11999E, #2980b9);
+  background-image: -ms-linear-gradient(top, #11999E, #2980b9);
+  background-image: -o-linear-gradient(top, #11999E, #2980b9);
+  background-image: linear-gradient(to bottom, #11999E, #2980b9);
+  -webkit-border-radius: 10;
+  -moz-border-radius: 10;
+  border-radius: 10px;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 20px;
+  margin: 40px auto 20px auto;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+  display: inline-block;
+}
+
+/* Bot Container */
+
+.bot-container {
+background-color: #66BFBF;
+padding-top: 20px;
+padding-bottom: 20px;
+}
+
+.footer-text {
+  color: #EAF6F6;
+  margin-bottom: 0;
+}
+
+.footer-link {
+  font-weight: bold;
+  text-decoration: none;
+  margin: auto 10px 0 10px;
 }
