--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@ a {
 }
 
 body {
+  color: #40514E;
   font-family: 'Raleway', sans-serif;
   margin: 0;
   text-align: center;
@@ -37,6 +38,7 @@ hr {
 }
 
 p {
+  line-height: 2;
   font-weight: bold;
 }
 
@@ -73,12 +75,11 @@ p {
 /* Mid Container */
 
 .mid-container {
-  padding: 60px 0;
+  padding: 30px 0;
 }
 
 .skill-row {
-  margin: 50px auto;
-  line-height: 2;
+  margin: 25px auto;
   text-align: left;
   width: 60%;
 }
@@ -117,7 +118,7 @@ p {
   -webkit-border-radius: 10;
   -moz-border-radius: 10;
   border-radius: 10px;
-  font-family: Arial;
+  font-family: 'Raleway', sans-serif;
   color: #ffffff;
   font-size: 20px;
   margin: 40px auto 20px auto;
@@ -136,6 +137,7 @@ padding-bottom: 20px;
 
 .footer-text {
   color: #EAF6F6;
+  font-size: .9rem;
   margin-bottom: 0;
 }
 
